# audit-clearance

./: .gitignore  Dockerfile  Dockerfile_pytorch  Makefile  env.example  main.py  pyproject.toml
arena/: config.py  environment.py  evaluator.py  llm.py  models.py  runner.py  task_loader.py  tool_parser.py
task_pairs/banking_transfer/: task.yaml
task_pairs/calculation_task/: task.yaml
